fix padding on page breaks

--- a/index.html
+++ b/index.html
@@ -227,9 +227,10 @@
 <!-- Begin contact fieldset -->
 <fieldset>
  <legend>Contact Information</legend>
-
+<div class="info"></div>
  <p class="prompt"><span>Required fields are followed by <strong><abbr title="required">*</abbr></strong></span></p>
-  <!--first name required-->
+</p>
+ <!--first name required-->
  <div class="default-fields">
   <label id="name-label" for="name" class="contacts">
    <strong>First Name</strong>
