add subtitle; adjust section padding

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <!--Main Content-->
 <main id="content">
 <section id="mission">
-  <div id="mission-header">
+  <div id="mission-header" class="subhead">
 <h3>Our Mission</h3>
 </div>
 <div class="info">
@@ -75,6 +75,9 @@
     <h1>About Us</h1>
   </div>
   <div class="info">
+    <div class="subhead">
+    <h3>How We Got Our Start</h3>
+    </div>
    <p>This paragraph contains the about us content. Add a three to five sentence description of the business here. </p>
    </div>
    </section>
@@ -85,17 +88,18 @@
     <div id="services-header" class="feature-image">
     <h1>Services</h1>
     </div>
-
+    <div class="subhead">
+    <h3>What We Do</h3>
    <div class="info">
-    <h3>Featured Service #1</h3>
+      <h4>Featured Service #1</h4>
     <p>Placeholder text describing a service this company provides.</p>
     </div>
     <div class="info">
-      <h3>Featured Service #2</h3>
+      <h4>Featured Service #2</h4>
       <p>Placeholder text describing a service this company provides.</p>
     </div>
       <div class="info">
-        <h3>Featured Service #3</h3>
+        <h4>Featured Service #3</h4>
         <p>Placeholder text describing a service this company provides.</p>
       </div>
    </section>
