--- a/index.html
+++ b/index.html
@@ -314,10 +314,10 @@
 <!--Start footer section-->
 <footer id="main-footer">
   <div id="social-menu">
-   <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
-   <a href="facebook.com"><i class="fab fa-facebook-f"></i></a>
-   <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
-   <a href="https://www.linkedin.com"><i class="fab fa-linkedin-in"></i></a>
+   <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+   <a href="facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+   <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+   <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
    <a id="profile-link" href="https://github.com" target="_blank"><i class="fab fa-github-alt"></i></a>
 </div>
 <div class="info">
